--- a/app.yaml
+++ b/app.yaml
@@ -5,3 +5,8 @@ threadsafe: yes
 handlers:
 - url: .*
   script: helloworld.app
+
+
+libraries:                                                                      
+- name: jinja2                                                                  
+  version: latest  
